# minimal-rust-on-riscv

./: Cargo.toml  Makefile  README.md  link.ld  openocd_pipe.gdb  openocd_zynqmp_bscane2.cfg
.cargo/: config
src/: main.rs
