[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# https://docs.rust-embedded.org/embedonomicon/smallest-no-std.html

# unconditionally abort on panic, do not unwind
[profile.dev]
panic = "abort"

# unconditionally abort on panic, do not unwind
[profile.release]
panic = "abort"
# keep debug info in release
debug = true
